# fsserve

./: Cargo.toml  README.md
cli/: main.rs
src/: error.rs  lib.rs  server.rs
src/entry_data/: entry_type.rs  mod.rs
