[package]
name = "fsserve"
description = "Serve a file system structure as JSON"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[[bin]]
name = "fsserve-cli"
path = "cli/main.rs"

[dependencies]
derive_builder = "0.9.0"
failure = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
simple-server = "0.4.0"
